Added About Us and Contact sections
Changed the code of index.html to

--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
 <div class="topnav">
 
   <div class="topnav-centered">
-    <a href="#home" class="active">Home</a>
+    <a href="index.html" class="active">Home</a>
   </div>
 
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
+  <a href="contacts.html">Contact</a>
 
   <div class="topnav-right">
-    <a href="#search">Search</a>
-    <a href="#about">About</a>
+    <a href="about.html">About</a>
   </div>
 
 </div>
@@ -33,12 +31,12 @@
           <h1>Cybersecurity</h1>
           </p>
 
-<form
+<!--<form
 action="https://www.google.com/search"
 method="get">
   <input name="q" placeholder="Search on Google...">
   <button>Search</button>
-</form>
+</form>-->
 
           <div class="cta">
             <a class="btn primary" href="#features">Lorem ipsum...</a>
@@ -47,7 +45,7 @@ method="get">
         </div>
 
         <div>
-          <img src="images/biggie.jpg" alt="IMAGE PLACEHOLDER" style="width:50%; border-radius:14px; border:1px solid #e6e8ee; background:#fff;">
+          <img src="images/biggie.jpg" alt="IMAGE PLACEHOLDER" style="width:50%; border-radius:14px; border:1px solid #e6e8ee; background:#fff;" >
         </div>
       </div>
     </section>
@@ -97,7 +95,7 @@ method="get">
 
   <footer class="footer">
     <div class="container">
-      <p>© <span id="year"></span> MUDJA™ / ZH4A</p>
+      <p> © <span id="year"></span> MUDJA™ </p>
     </div>
   </footer>
 
